--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<!-- font-awesome -->
 	<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 	<!--Page title -->
-	<title>Class 3</title>
+	<title>STRICT</title>
 		<!-- Main css file -->
 	<link rel="stylesheet" href="css/style.css">
 </head>
