--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 	<!--Page title -->
 	<title>STRICT</title>
-		<!-- Main css file -->
+	<!-- Main css file -->
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -46,7 +46,9 @@
 			<div class="row">
 				<div class="col-12">
 					<h2>Simple & pure design.</h2>
-					<p>Designers everywhere gush with admiration upon seeing a web design and exclaim "its beautiful, it's so clean!". There are a countless number of webdesign round-ups dedicated to 'clean' design and it is a term thrown around quite a bit in the web design community. It can be easy to spot a good example of clean design.</p>
+					<p>Designers everywhere gush with admiration upon seeing a web design and exclaim "its beautiful, it's so clean!". 
+					   There are a countless number of webdesign round-ups dedicated to 'clean' design and it is a term thrown around quite a bit in the web design community. 
+					   It can be easy to spot a good example of clean design.</p>
 				</div>
 			</div>
 		</div>
